--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -128,7 +128,7 @@
  
 [3.2 Methodology]{.semibold}
 
-<p align="justify">For the model development a deep neural network (DNN) [@isbn:10.1109/DASC.2016.7778092] architecture – the sequential model from Keras library in Tensorflow was leveraged [@{https://keras.io/guides/sequential_model/}]. DNN was resorted due to the high dimensionality of the feature- space and the non-existence of a physical model that relates weather conditions to road construction project duration. Hence with DNN, patterns in the data feature-space would be automatically realised, weights would be generated to fit a model to the data and predict the output (project duration labels) given inputs of weather conditions (Temperature, Pressure, etc.). This sequential model accepts a single tensor of features and observations and returns a single tensor of labels for each observation as its output.  Furthermore, the Keras library offers various loss functions depending on the kind of model to be built. For this project, the categorical cross-entropy loss function [@{https://gombru.github.io/2018/05/23/cross_entropy_loss/}] was leveraged for multi-class classification. Python offers great flexibility and computational speed when it comes to addressing multiclass classification problems, hence it was adopted for model development.</p>
+<p align="justify">For the model development a deep neural network (DNN) architecture – the sequential model from Keras library in Tensorflow was leveraged [@{https://keras.io/guides/sequential_model/}]. DNN was resorted due to the high dimensionality of the feature- space and the non-existence of a physical model that relates weather conditions to road construction project duration. Hence with DNN, patterns in the data feature-space would be automatically realised, weights would be generated to fit a model to the data and predict the output (project duration labels) given inputs of weather conditions (Temperature, Pressure, etc.). This sequential model accepts a single tensor of features and observations and returns a single tensor of labels for each observation as its output.  Furthermore, the Keras library offers various loss functions depending on the kind of model to be built. For this project, the categorical cross-entropy loss function [@{https://gombru.github.io/2018/05/23/cross_entropy_loss/}] was leveraged for multi-class classification. Python offers great flexibility and computational speed when it comes to addressing multiclass classification problems, hence it was adopted for model development.</p>
 
 <p align="justify">As inputs, Temperature, Wind chill, Humidity, Pressure, Visibility, Wind speed, Precipitation, and Distance are the features used to train the model, the input size is eight. The labels from the dataset (i.e., the dependent variable which is the project duration class) is represented in the one-hot [@{https://analyticsindiamag.com/when-to-use-one-hot-encoding-in-deep-learning/}] format. To get the intended predictions, three hidden layers with five neurons each were initially defined. However, the final architecture included seven hidden layers as the initial three hidden layers resulted in 65% training accuracy, which was considered suboptimal. Therefore, in addition to input, and hidden layers, parameters like learning rate – the “Adams learning rate” [@{https://keras.io/guides/sequential_model/}] – a regularization factor that varied from 1e-3 to 1e-6, an epoch (number of steps of gradient descent) of 500, and a batch size of 10, were defined to complete the process of building and training the neural network. These parameters were chosen based on recommendations by [@{https://www.youtube.com/watch?v=2WdPdE2hq78}].</p>
 
@@ -138,39 +138,11 @@
 
  <p align="justify">Having completed the model preparation and training, the open-source Sklearn [@{https://scikit-learn.org/stable/modules/generated/sklearn.metrics.confusion_matrix.html}] package was leveraged to calculate prediction metrics like precision, recall, and f-score for each class, on the test dataset and also plot confusion matrix for visualization. The confusion matrix plots and accuracy metrics after testing the models on the various test and validation datasets are presented below.</p>
 
- |:----------------------------------|:-------------------------------------|
-|![](images/Figure 1.png)|![](images/Figure 2.png)| 
-|Fig 1. Confusion matrix for case 1 test dataset with 3 hidden layers of 32, 64, and 128 neurons respectively|Fig 2. Confusion matrix for case 1 test dataset with 7 hidden layers of 32, 64, 128, 256, 128, 64 and 32 neurons respectively|
-|The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset|Test metrics:
-Precision: 0.35, 0.66, and 0.26 for label 1, 2 and 3 respectively i.e., “short term”, “medium term” and “long term”
-Recall:  0.22, 0.72, 0.19, for labels 1, 2, and 3 respectively
-Proportion of each class in original dataset: 
-25%, 65% and 0.1% for label 1, 2 and 3 respectively|
-|![](images/Figure 3.png)|![](images/Figure 4.png)|
-|Fig 3. Confusion matrix for case 2 test dataset (i.e., case 1 dataset  in PCA coordinate frame), with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively. 68% accuracy was obtained on the training data, with a loss of about 0.7|Fig 4. Confusion matrix for case 2 validation dataset, with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively. 68% accuracy was obtained on the training data, with a loss of about 0.7|
-|Test metrics:
-Precision: 0.34, 0.66, and 0.36 for label 1, 2 and 3 respectively i.e., “short term”, “medium term” and “long term”
-Recall:  0.06, 0.95, 0.06, for labels 1, 2, and 3 respectively
-Proportion of each class in original dataset: 
-25%, 65% and 0.1% for label 1, 2 and 3 respectively|Test metrics:
-Precision: 0.52, 0.67, and 0.58 for label 1, 2 and 3 respectively i.e., “short term”, “medium term” and “long term”
-Recall:  0.08, 0.96, 0.11, for labels 1, 2, and 3 respectively
-Proportion of each class in original dataset: 
-25%, 65% and 0.1% for label 1, 2 and 3 respectively|
-|![](images/Figure 5.png)|![](images/Figure 6.png)|
-|Fig 5. Confusion matrix for case 3 test dataset with 3 hidden layers of 32, 64, and 128 neurons respectively. 65% accuracy was obtained on the training data, with a loss of about 0.9|Fig 6. Confusion matrix for case 3 test dataset  with 7 hidden layers of 32, 64, 128, 256, 128, 64 and 32 neurons respectively. 78% accuracy was obtained on the training data, with a loss of about 0.5|
-|The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset|Test metrics:
-Precision: 0.41, 0.30, and 0.45 for label 1, 2 and 3 respectively i.e., “short term”, “medium term” and “long term”
-Recall:  0.34, 0.29, 0.52, for labels 1, 2, and 3 respectively
-Proportion of each class in original dataset: 
-33%, 27% and 40% for label 1, 2 and 3 respectively|
-
-
-
+ 
 
 <p align="center">![](images/Figure 1.png)</p>
-<p align="justify">Fig 1. Confusion matrix for case 1 test dataset with 3 hidden layers of 32, 64, and 128 neurons respectively.</p> 
-<p align="justify">65% accuracy was obtained on the training data, with a loss of about 0.6. The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset.</p>
+_Fig 1. Confusion matrix for case 1 test dataset with 3 hidden layers of 32, 64, and 128 neurons respectively_
+<p align="justify">__Output:__ 65% accuracy was obtained on the training data, with a loss of about 0.6. The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset.</p>
 
 <p align="center">![](images/Figure 2.png)</p>
 <p align="justify">Fig 2. Confusion matrix for case 1 test dataset with 7 hidden layers of 32, 64, 128, 256, 128, 64 and 32 neurons respectively.</p> 
@@ -226,7 +198,7 @@ Proportion of each class in original dataset:
 
 [1] Karimi Monsefi, Amin, Sobhan Moosavi, and Rajiv Ramnath. “Will there be a construction? Predicting road constructions based on heterogeneous spatiotemporal data.”, _2022_
 
-[2] Y. J. Kim, S. Choi, S. Briceno and D. Mavris, "A deep learning approach to flight delay prediction," _2016 IEEE/AIAA 35th Digital Avionics Systems Conference (DASC)
+[2] Y. J. Kim, S. Choi, S. Briceno and D. Mavris, "A deep learning approach to flight delay prediction," _2016 IEEE/AIAA 35th Digital Avionics Systems Conference (DASC), 2016, pp. doi:10.1109/DASC.2016.7778092_
 
 [3] Keras sequential model, Tensorflow
 
