--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -144,9 +144,11 @@ _Fig 1. Confusion matrix for case 1 test dataset with 3 hidden layers of 32, 64,
 
 <p align="center">![](images/Figure 2.png)</p>
 _Fig 2. Confusion matrix for case 1 test dataset with 7 hidden layers of 32, 64, 128, 256, 128, 64 and 32 neurons respectively_
-<p align="justify">__Output:__87% accuracy was obtained on the training data, with a loss of about 0.3</p>
+<p align="justify">__Output:__ 87% accuracy was obtained on the training data, with a loss of about 0.3</p>
 
 [Test metrics:]{.semibold}
+|[Prediction Matrix]{.center}|[Description]{.center}|
+|:--------|:-------------------------------------|
 |Precision|0.35, 0.66, and 0.26 for short term, medium term and long term respectively|
 |Recall|0.22, 0.72, 0.19, for short term, medium term and long term respectively|
 |Proportion of each class in original dataset|25%, 65% and 0.1% for short term, medium term and long term respectively|
@@ -154,7 +156,7 @@ _Fig 2. Confusion matrix for case 1 test dataset with 7 hidden layers of 32, 64,
 <p align="center">![](images/Figure 3.png)</p>
 _Fig 3. Confusion matrix for case 2 test dataset, with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively_
 
-<p align="justify">__Output:__68% accuracy was obtained on the training data, with a loss of about 0.7</p>
+<p align="justify">__Output:__ 68% accuracy was obtained on the training data, with a loss of about 0.7</p>
 
 [Test metrics:]{.semibold}
 <p align="justify">Precision: 0.34, 0.66, and 0.36 for label 1, 2 and 3 respectively i.e., “short term”, “medium term” and “long term”</p>
@@ -163,7 +165,7 @@ _Fig 3. Confusion matrix for case 2 test dataset, with 7 hidden layers with 32, 
 
 <p align="center">![](images/Figure 4.png)</p>
 _Fig 4. Confusion matrix for case 2 validation dataset, with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively_ 
-<p align="justify">__Output:__68% accuracy was obtained on the training data, with a loss of about 0.7</p>
+<p align="justify">__Output:__ 68% accuracy was obtained on the training data, with a loss of about 0.7</p>
 
 [Test metrics:]{.semibold}
 <p align="justify">Precision: 0.52, 0.67, and 0.58 for label 1, 2 and 3 respectively i.e., “short term”, “medium term” and “long term”</p>
@@ -172,11 +174,11 @@ _Fig 4. Confusion matrix for case 2 validation dataset, with 7 hidden layers wit
 
 <p align="center">![](images/Figure 5.png)</p>
 _Fig 5. Confusion matrix for case 3 test dataset with 3 hidden layers of 32, 64, and 128 neurons respectively_
-<p align="justify">__Output:__65% accuracy was obtained on the training data, with a loss of about 0.9.The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset</p>
+<p align="justify">__Output:__ 65% accuracy was obtained on the training data, with a loss of about 0.9.The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset</p>
 
 <p align="center">![](images/Figure 6.png)</p>
 _Fig 6. Confusion matrix for case 3 test dataset  with 7 hidden layers of 32, 64, 128, 256, 128, 64 and 32 neurons respectively_
-<p align="justify">__Output:__78% accuracy was obtained on the training data, with a loss of about 0.5</p>
+<p align="justify">__Output:__ 78% accuracy was obtained on the training data, with a loss of about 0.5</p>
 
 [Test metrics:]{.semibold}
 <p align="justify">Precision: 0.41, 0.30, and 0.45 for label 1, 2 and 3 respectively i.e., “short term”, “medium term” and “long term”</p>
@@ -199,18 +201,3 @@ _Fig 6. Confusion matrix for case 3 test dataset  with 7 hidden layers of 32, 64
 
 [2] Y. J. Kim, S. Choi, S. Briceno and D. Mavris, "A deep learning approach to flight delay prediction," _2016 IEEE/AIAA 35th Digital Avionics Systems Conference (DASC), 2016, pp. doi:10.1109/DASC.2016.7778092_
 
-[3] Keras sequential model, Tensorflow
-
-[4] Understanding Categorical Cross-Entropy Loss, Binary Cross-Entropy Loss, Softmax Loss, Logistic Loss, Focal loss, and all those confusing names 
-
-[5] When to Use One-Hot Encoding in Deep Learning? 
-
-[6] Constructing a Multi-Class Classifier Using Neural Network with Python 
-
-[7] A Gentle Introduction to the Rectified Linear Unit (ReLU) 
-
-[8] A Gentle Introduction To Sigmoid Function 
-
-[9] Stochastic Gradient Descent – Clearly Explained!! 
-
-[10] Confusion Matrix with Sklearn 
