--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -147,8 +147,8 @@ _Fig 2. Confusion matrix for case 1 test dataset with 7 hidden layers of 32, 64,
 <p align="justify">__Output:__ 87% accuracy was obtained on the training data, with a loss of about 0.3</p>
 
 [Test metrics:]{.semibold}
-|[Prediction Matrix]{.center}|[Description]{.center}|
-|:--------|:-------------------------------------|
+|[Prediction Matrix]|[Description]|
+|:-----------------------------------------------|:-------------------------------------|
 |Precision|0.35, 0.66, and 0.26 for short term, medium term and long term respectively|
 |Recall|0.22, 0.72, 0.19, for short term, medium term and long term respectively|
 |Proportion of each class in original dataset|25%, 65% and 0.1% for short term, medium term and long term respectively|
