--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -146,10 +146,8 @@ _Fig 1. Confusion matrix for case 1 test dataset with 3 hidden layers of 32, 64,
 _Fig 2. Confusion matrix for case 1 test dataset with 7 hidden layers of 32, 64, 128, 256, 128, 64 and 32 neurons respectively_
 <p align="justify">__Output:__ 87% accuracy was obtained on the training data, with a loss of about 0.3</p>
 
-[Test metrics:]{.semibold}
-
 |[Prediction Matrix]|[Description]|
-|:-----------------------------------------------|:-------------------------------------|
+|:----------------------|:-------------------------------------|
 |Precision|0.35, 0.66, and 0.26 for short term, medium term and long term respectively|
 |Recall|0.22, 0.72, 0.19, for short term, medium term and long term respectively|
 |Proportion of each class in original dataset|25%, 65% and 0.1% for short term, medium term and long term respectively|
@@ -159,19 +157,21 @@ _Fig 3. Confusion matrix for case 2 test dataset, with 7 hidden layers with 32, 
 
 <p align="justify">__Output:__ 68% accuracy was obtained on the training data, with a loss of about 0.7</p>
 
-[Test metrics:]{.semibold}
-<p align="justify">Precision: 0.34, 0.66, and 0.36 for label 1, 2 and 3 respectively i.e., “short term”, “medium term” and “long term”</p>
-<p align="justify">Recall:  0.06, 0.95, 0.06, for labels 1, 2, and 3 respectively</p>
-<p align="justify">Proportion of each class in original dataset: 25%, 65% and 0.1% for label 1, 2 and 3 respectively</p>
+|[Prediction Matrix]|[Description]|
+|:----------------------|:-------------------------------------|
+|Precision|0.34, 0.66, and 0.36 for short term, medium term and long term respectively|
+|Recall|0.06, 0.95, 0.06, for short term, medium term and long term respectively|
+|Proportion of each class in original dataset|25%, 65% and 0.1% for short term, medium term and long term respectively|
 
 <p align="center">![](images/Figure 4.png)</p>
 _Fig 4. Confusion matrix for case 2 validation dataset, with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively_ 
 <p align="justify">__Output:__ 68% accuracy was obtained on the training data, with a loss of about 0.7</p>
 
-[Test metrics:]{.semibold}
-<p align="justify">Precision: 0.52, 0.67, and 0.58 for label 1, 2 and 3 respectively i.e., “short term”, “medium term” and “long term”</p>
-<p align="justify">Recall:  0.08, 0.96, 0.11, for labels 1, 2, and 3 respectively</p>
-<p align="justify">Proportion of each class in original dataset: 25%, 65% and 0.1% for label 1, 2 and 3 respectively</p>
+|[Prediction Matrix]|[Description]|
+|:----------------------|:-------------------------------------|
+|Precision|0.52, 0.67, and 0.58 for short term, medium term and long term respectively|
+|Recall|0.08, 0.96, 0.11, for short term, medium term and long term respectively|
+|Proportion of each class in original dataset|25%, 65% and 0.1% for short term, medium term and long term respectively|
 
 <p align="center">![](images/Figure 5.png)</p>
 _Fig 5. Confusion matrix for case 3 test dataset with 3 hidden layers of 32, 64, and 128 neurons respectively_
@@ -181,10 +181,12 @@ _Fig 5. Confusion matrix for case 3 test dataset with 3 hidden layers of 32, 64,
 _Fig 6. Confusion matrix for case 3 test dataset  with 7 hidden layers of 32, 64, 128, 256, 128, 64 and 32 neurons respectively_
 <p align="justify">__Output:__ 78% accuracy was obtained on the training data, with a loss of about 0.5</p>
 
-[Test metrics:]{.semibold}
-<p align="justify">Precision: 0.41, 0.30, and 0.45 for label 1, 2 and 3 respectively i.e., “short term”, “medium term” and “long term”</p>
-<p align="justify">Recall:  0.34, 0.29, 0.52, for labels 1, 2, and 3 respectively</p>
-<p align="justify">Proportion of each class in original dataset: 33%, 27% and 40% for label 1, 2 and 3 respectively</p>
+|[Prediction Matrix]|[Description]|
+|:----------------------|:-------------------------------------|
+|Precision|0.41, 0.30, and 0.45 for short term, medium term and long term respectively|
+|Recall|0.34, 0.29, 0.52, for short term, medium term and long term respectively|
+|Proportion of each class in original dataset|3%, 27% and 40% for short term, medium term and long term respectively|
+
 
 [3.4 Discussion and Inferences]{.semibold}
 
