--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -140,13 +140,13 @@
 
 <p align="center">![](images/Figure 1.png)</p>
 _Fig 1. Confusion matrix for case 1 test dataset with 3 hidden layers of 32, 64, and 128 neurons respectively_
-<p align="justify">__Output:__ 65% accuracy was obtained on the training data, with a loss of about 0.6. The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset.</p>
+<p align="justify">__Outcome:__ 65% accuracy was obtained on the training data, with a loss of about 0.6. The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset.</p>
 
 <p align="center">![](images/Figure 2.png)</p>
 _Fig 2. Confusion matrix for case 1 test dataset with 7 hidden layers of 32, 64, 128, 256, 128, 64 and 32 neurons respectively_
-<p align="justify">__Output:__ 87% accuracy was obtained on the training data, with a loss of about 0.3</p>
+<p align="justify">__Outcome:__ 87% accuracy was obtained on the training data, with a loss of about 0.3</p>
 
-|[Prediction Matrix]|[Description]|
+|Prediction Matrix|Description|
 |:----------------------|:-------------------------------------|
 |Precision|0.35, 0.66, and 0.26 for short term, medium term and long term respectively|
 |Recall|0.22, 0.72, 0.19, for short term, medium term and long term respectively|
@@ -154,10 +154,9 @@ _Fig 2. Confusion matrix for case 1 test dataset with 7 hidden layers of 32, 64,
 
 <p align="center">![](images/Figure 3.png)</p>
 _Fig 3. Confusion matrix for case 2 test dataset, with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively_
+<p align="justify">__Outcome:__ 68% accuracy was obtained on the training data, with a loss of about 0.7</p>
 
-<p align="justify">__Output:__ 68% accuracy was obtained on the training data, with a loss of about 0.7</p>
-
-|[Prediction Matrix]|[Description]|
+|Prediction Matrix|Description|
 |:----------------------|:-------------------------------------|
 |Precision|0.34, 0.66, and 0.36 for short term, medium term and long term respectively|
 |Recall|0.06, 0.95, 0.06, for short term, medium term and long term respectively|
@@ -165,9 +164,9 @@ _Fig 3. Confusion matrix for case 2 test dataset, with 7 hidden layers with 32, 
 
 <p align="center">![](images/Figure 4.png)</p>
 _Fig 4. Confusion matrix for case 2 validation dataset, with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively_ 
-<p align="justify">__Output:__ 68% accuracy was obtained on the training data, with a loss of about 0.7</p>
+<p align="justify">__Outcome:__ 68% accuracy was obtained on the training data, with a loss of about 0.7</p>
 
-|[Prediction Matrix]|[Description]|
+|Prediction Matrix|Description|
 |:----------------------|:-------------------------------------|
 |Precision|0.52, 0.67, and 0.58 for short term, medium term and long term respectively|
 |Recall|0.08, 0.96, 0.11, for short term, medium term and long term respectively|
@@ -175,18 +174,17 @@ _Fig 4. Confusion matrix for case 2 validation dataset, with 7 hidden layers wit
 
 <p align="center">![](images/Figure 5.png)</p>
 _Fig 5. Confusion matrix for case 3 test dataset with 3 hidden layers of 32, 64, and 128 neurons respectively_
-<p align="justify">__Output:__ 65% accuracy was obtained on the training data, with a loss of about 0.9.The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset</p>
+<p align="justify">__Outcome:__ 65% accuracy was obtained on the training data, with a loss of about 0.9.The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset</p>
 
 <p align="center">![](images/Figure 6.png)</p>
 _Fig 6. Confusion matrix for case 3 test dataset  with 7 hidden layers of 32, 64, 128, 256, 128, 64 and 32 neurons respectively_
-<p align="justify">__Output:__ 78% accuracy was obtained on the training data, with a loss of about 0.5</p>
+<p align="justify">__Outcome:__ 78% accuracy was obtained on the training data, with a loss of about 0.5</p>
 
-|[Prediction Matrix]|[Description]|
+|Prediction Matrix|Description|
 |:----------------------|:-------------------------------------|
 |Precision|0.41, 0.30, and 0.45 for short term, medium term and long term respectively|
 |Recall|0.34, 0.29, 0.52, for short term, medium term and long term respectively|
 |Proportion of each class in original dataset|3%, 27% and 40% for short term, medium term and long term respectively|
-
 
 [3.4 Discussion and Inferences]{.semibold}
 
