--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -139,11 +139,11 @@
  <p align="justify">Having completed the model preparation and training, the open-source Sklearn [@{https://scikit-learn.org/stable/modules/generated/sklearn.metrics.confusion_matrix.html}] package was leveraged to calculate prediction metrics like precision, recall, and f-score for each class, on the test dataset and also plot confusion matrix for visualization. The confusion matrix plots and accuracy metrics after testing the models on the various test and validation datasets are presented below.</p>
 
 <p align="center">![](images/Figure 1.png)</p>
-_Fig 1. Confusion matrix for case 1 test dataset with 3 hidden layers of 32, 64, and 128 neurons respectively_
+[_Fig 1. Confusion matrix for case 1 test dataset with 3 hidden layers of 32, 64, and 128 neurons respectively_]{.center}
 <p align="justify">__Outcome:__ 65% accuracy was obtained on the training data, with a loss of about 0.6. The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset.</p>
 
 <p align="center">![](images/Figure 2.png)</p>
-_Fig 2. Confusion matrix for case 1 test dataset with 7 hidden layers of 32, 64, 128, 256, 128, 64 and 32 neurons respectively_
+[_Fig 2. Confusion matrix for case 1 test dataset with 7 hidden layers of 32, 64, 128, 256, 128, 64 and 32 neurons respectively_]{.center}
 <p align="justify">__Outcome:__ 87% accuracy was obtained on the training data, with a loss of about 0.3</p>
 
 |Prediction Matrix|Description|
@@ -153,7 +153,7 @@ _Fig 2. Confusion matrix for case 1 test dataset with 7 hidden layers of 32, 64,
 |Proportion of each class in original dataset|25%, 65% and 0.1% for short term, medium term and long term respectively|
 
 <p align="center">![](images/Figure 3.png)</p>
-_Fig 3. Confusion matrix for case 2 test dataset, with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively_
+[_Fig 3. Confusion matrix for case 2 test dataset, with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively_]{.center}
 <p align="justify">__Outcome:__ 68% accuracy was obtained on the training data, with a loss of about 0.7</p>
 
 |Prediction Matrix|Description|
@@ -163,7 +163,7 @@ _Fig 3. Confusion matrix for case 2 test dataset, with 7 hidden layers with 32, 
 |Proportion of each class in original dataset|25%, 65% and 0.1% for short term, medium term and long term respectively|
 
 <p align="center">![](images/Figure 4.png)</p>
-_Fig 4. Confusion matrix for case 2 validation dataset, with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively_ 
+[_Fig 4. Confusion matrix for case 2 validation dataset, with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively_]{.center} 
 <p align="justify">__Outcome:__ 68% accuracy was obtained on the training data, with a loss of about 0.7</p>
 
 |Prediction Matrix|Description|
@@ -173,11 +173,11 @@ _Fig 4. Confusion matrix for case 2 validation dataset, with 7 hidden layers wit
 |Proportion of each class in original dataset|25%, 65% and 0.1% for short term, medium term and long term respectively|
 
 <p align="center">![](images/Figure 5.png)</p>
-_Fig 5. Confusion matrix for case 3 test dataset with 3 hidden layers of 32, 64, and 128 neurons respectively_
+[_Fig 5. Confusion matrix for case 3 test dataset with 3 hidden layers of 32, 64, and 128 neurons respectively_]{.center}
 <p align="justify">__Outcome:__ 65% accuracy was obtained on the training data, with a loss of about 0.9.The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset</p>
 
 <p align="center">![](images/Figure 6.png)</p>
-_Fig 6. Confusion matrix for case 3 test dataset  with 7 hidden layers of 32, 64, 128, 256, 128, 64 and 32 neurons respectively_
+[_Fig 6. Confusion matrix for case 3 test dataset  with 7 hidden layers of 32, 64, 128, 256, 128, 64 and 32 neurons respectively_]{.center}
 <p align="justify">__Outcome:__ 78% accuracy was obtained on the training data, with a loss of about 0.5</p>
 
 |Prediction Matrix|Description|
