--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -58,8 +58,8 @@ This study explains how data wrangling is performed to clean, manipulate and mak
 
 <p align="justify">The resulting dataset, as presented in Fig. 16 of the appendix, is processed to reveal critical features. A rough guess is that the features quantifying environmental conditions like temperature, wind chill, pressure, and humidity together with the road construction span affect the project duration as there is a considerable spread in their histogram distributions. It is assumed that the recorded values of these environmental features are an average over the entire project duration. Thus, given the average environmental conditions and the span of road construction, the developed model is expected to predict the class of the project's completion time as short, medium, or long-term. Table 2 below shows the summary of features selected for the predictive model.</p>
 
-![](images/Fig 1.png)
-[*Fig. 1: Histogram plots showing spread of Temperature, Wind Chill, Pressure and Humidity in the selected dataset*]{.semibold}
+[![](images/Fig 1.png)]{.center}
+[*Fig. 1: Histogram plots showing spread of Temperature, Wind Chill, Pressure and Humidity in the selected dataset*]{.semibold}{.center}
 
 [Table 2: Extracted features for performing EDA]{.semibold}
 ![](images/Table 2.png)
@@ -102,19 +102,10 @@ This study explains how data wrangling is performed to clean, manipulate and mak
 
  <p align="justify">Having completed the model preparation and training, the open-source Sklearn [17] package was leveraged to calculate prediction metrics like precision, recall, and f-score for each class, on the test dataset and plot confusion matrix for visualization. The confusion matrix plots and accuracy metrics after testing the models on the various test and validation datasets are presented below.</p>
 
-<p align="center">![](images/Figure 1.png)</p>
-[_Fig 1. Confusion matrix for case 1 test dataset with 3 hidden layers of 32, 64, and 128 neurons respectively_]{.center}
-<p align="justify">__Outcome:__ 65% accuracy was obtained on the training data, with a loss of about 0.6. The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset.</p>
-
-<p align="center">![](images/Figure 2.png)</p>
-[_Fig 2. Confusion matrix for case 1 test dataset with 7 hidden layers of 32, 64, 128, 256, 128, 64 and 32 neurons respectively_]{.center}
-<p align="justify">__Outcome:__ 87% accuracy was obtained on the training data, with a loss of about 0.3</p>
-
-|Prediction Matrix|Description|
-|:----------------------|:-------------------------------------|
-|Precision|0.35, 0.66, and 0.26 for short term, medium term and long term respectively|
-|Recall|0.22, 0.72, 0.19, for short term, medium term and long term respectively|
-|Proportion of each class in original dataset|25%, 65% and 0.1% for short term, medium term and long term respectively|
+|:----------------------|
+|![](images/Fig 8.png)|
+|*Fig 8. Confusion matrix for case 1 test dataset, with 3 hidden layers of 32, 64, and 128 neurons respectively*|
+|<p align="justify">65% accuracy was obtained on the training data, with a loss of about 0.6. The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset.</p>|
 
 <p align="center">![](images/Figure 3.png)</p>
 [_Fig 3. Confusion matrix for case 2 test dataset, with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively_]{.center}
