--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -59,7 +59,7 @@ This study explains how data wrangling is performed to clean, manipulate and mak
 <p align="justify">The resulting dataset, as presented in Fig. 16 of the appendix, is processed to reveal critical features. A rough guess is that the features quantifying environmental conditions like temperature, wind chill, pressure, and humidity together with the road construction span affect the project duration as there is a considerable spread in their histogram distributions. It is assumed that the recorded values of these environmental features are an average over the entire project duration. Thus, given the average environmental conditions and the span of road construction, the developed model is expected to predict the class of the project's completion time as short, medium, or long-term. Table 2 below shows the summary of features selected for the predictive model.</p>
 
 [![](images/Fig 1.png)]{.center}
-[*Fig. 1: Histogram plots showing spread of Temperature, Wind Chill, Pressure and Humidity in the selected dataset*]{.semibold}{.center}
+[[*Fig. 1: Histogram plots showing spread of Temperature, Wind Chill, Pressure and Humidity in the selected dataset*]{.center}]{.semibold}
 
 [Table 2: Extracted features for performing EDA]{.semibold}
 ![](images/Table 2.png)
