--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -100,12 +100,21 @@ This study explains how data wrangling is performed to clean, manipulate and mak
 
 [3.3 Results]{.semibold}
 
- <p align="justify">Having completed the model preparation and training, the open-source Sklearn [17] package was leveraged to calculate prediction metrics like precision, recall, and f-score for each class, on the test dataset and plot confusion matrix for visualization. The confusion matrix plots and accuracy metrics after testing the models on the various test and validation datasets are presented below.</p>
+<p align="justify">Having completed the model preparation and training, the open-source Sklearn [17] package was leveraged to calculate prediction metrics like precision, recall, and f-score for each class, on the test dataset and plot confusion matrix for visualization. The confusion matrix plots and accuracy metrics after testing the models on the various test and validation datasets are presented below.</p>
 
-|:----------------------|
-|![](images/Fig 8.png)|
-|*Fig 8. Confusion matrix for case 1 test dataset, with 3 hidden layers of 32, 64, and 128 neurons respectively*|
-|<p align="justify">65% accuracy was obtained on the training data, with a loss of about 0.6. The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset.</p>|
+<p align="center">![](images/Figure 1.png)</p>
+[_Fig 1. Confusion matrix for case 1 test dataset, with 3 hidden layers of 32, 64, and 128 neurons respectively_]{.center}
+<p align="justify">__Outcome:__ 65% accuracy was obtained on the training data, with a loss of about 0.6. The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset.</p>
+
+<p align="center">![](images/Figure 2.png)</p>
+[_Fig 3. Confusion matrix for case 2 test dataset, with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively_]{.center}
+<p align="justify">__Outcome:__ 87% accuracy was obtained on the training data</p>
+
+|Prediction Matrix|Description|
+|:----------------------|:-------------------------------------|
+|Precision|0.35, 0.66, and 0.26 for short term, medium term and long term respectively|
+|Recall|0.22, 0.72, 0.19, for short term, medium term and long term respectively|
+|Proportion of each class in original dataset|25%, 65% and 0.1% for short term, medium term and long term respectively|
 
 <p align="center">![](images/Figure 3.png)</p>
 [_Fig 3. Confusion matrix for case 2 test dataset, with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively_]{.center}
@@ -114,8 +123,6 @@ This study explains how data wrangling is performed to clean, manipulate and mak
 |Prediction Matrix|Description|
 |:----------------------|:-------------------------------------|
 |Precision|0.34, 0.66, and 0.36 for short term, medium term and long term respectively|
-|Recall|0.06, 0.95, 0.06, for short term, medium term and long term respectively|
-|Proportion of each class in original dataset|25%, 65% and 0.1% for short term, medium term and long term respectively|
 
 <p align="center">![](images/Figure 4.png)</p>
 [_Fig 4. Confusion matrix for case 2 validation dataset, with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively_]{.center} 
