--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -61,8 +61,8 @@ This study explains how data wrangling is performed to clean, manipulate and mak
 [![](images/Fig 1.png)]{.center}
 [[*Fig. 1: Histogram plots showing spread of Temperature, Wind Chill, Pressure and Humidity in the selected dataset*]{.center}]{.semibold}
 
-[Table 2: Extracted features for performing EDA]{.semibold}
-![](images/Table 2.png)
+[[Table 2: Extracted features for performing EDA]{.center}]{.semibold}
+![](images/Table 2.png){.center}
 
 [2.2.1 Feature detection and EDA]{.semibold} 
 
@@ -102,13 +102,13 @@ This study explains how data wrangling is performed to clean, manipulate and mak
 
 <p align="justify">Having completed the model preparation and training, the open-source Sklearn [17] package was leveraged to calculate prediction metrics like precision, recall, and f-score for each class, on the test dataset and plot confusion matrix for visualization. The confusion matrix plots and accuracy metrics after testing the models on the various test and validation datasets are presented below.</p>
 
-<p align="center">![](images/Figure 1.png)</p>
-[_Fig 8. Confusion matrix for case 1 test dataset, with 3 hidden layers of 32, 64, and 128 neurons respectively_]{.center}
-<p align="justify">__Outcome:__ 65% accuracy was obtained on the training data, with a loss of about 0.6. The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset.</p>
+![](images/Figure 1.png){.center}
+[[*Fig. 8. Confusion matrix for case 1 test dataset, with 3 hidden layers of 32, 64, and 128 neurons respectively*]{.center}]{.semibold}
+<p align="justify">__Outcome from Fig. 8:__ 65% accuracy was obtained on the training data, with a loss of about 0.6. The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset.</p>
 
-<p align="center">![](images/Figure 2.png)</p>
-[_Fig 9. Confusion matrix for case 2 test dataset, with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively_]{.center}
-<p align="justify">__Outcome:__ 87% accuracy was obtained on the training data</p>
+![](images/Figure 2.png){.center}
+[[*Fig. 9. Confusion matrix for case 2 test dataset, with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively*]{.center}]{.semibold}
+<p align="justify">__Outcome from Fig. 9:__ 87% accuracy was obtained on the training data</p>
 
 |Prediction Matrix|Description|
 |:----------------------|:-------------------------------------|
@@ -116,17 +116,17 @@ This study explains how data wrangling is performed to clean, manipulate and mak
 |Recall|0.22, 0.72, 0.19, for short term, medium term and long term respectively|
 |Proportion of each class in original dataset|25%, 65% and 0.1% for short term, medium term and long term respectively|
 
-<p align="center">![](images/Figure 3.png)</p>
-[_Fig 10. Confusion matrix for case 2 test dataset, with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively_]{.center}
-<p align="justify">__Outcome:__ 68% accuracy was obtained on the training data, with a loss of about 0.7</p>
+![](images/Figure 3.png){.center}
+[[*Fig 10. Confusion matrix for case 2 test dataset, with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively*]{.center}]{.semibold}
+<p align="justify">__Outcome from Fig. 10:__ 68% accuracy was obtained on the training data, with a loss of about 0.7</p>
 
 |Prediction Matrix|Description|
 |:----------------------|:-------------------------------------|
 |Precision|0.34, 0.66, and 0.36 for short term, medium term and long term respectively|
 
-<p align="center">![](images/Figure 4.png)</p>
-[_Fig 11. Confusion matrix for case 2 validation dataset, with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively_]{.center} 
-<p align="justify">__Outcome:__ 68% accuracy was obtained on the training data, with a loss of about 0.7</p>
+[![](images/Figure 4.png){.center}
+[*Fig 11. Confusion matrix for case 2 validation dataset, with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively*]{.center}]{.semibold} 
+<p align="justify">__Outcome from Fig. 11:__ 68% accuracy was obtained on the training data, with a loss of about 0.7</p>
 
 |Prediction Matrix|Description|
 |:----------------------|:-------------------------------------|
@@ -134,12 +134,12 @@ This study explains how data wrangling is performed to clean, manipulate and mak
 |Recall|0.08, 0.96, 0.11, for short term, medium term and long term respectively|
 |Proportion of each class in original dataset|25%, 65% and 0.1% for short term, medium term and long term respectively|
 
-<p align="center">![](images/Figure 5.png)</p>
-[_Fig 12. Confusion matrix for case 3 test dataset with 3 hidden layers of 32, 64, and 128 neurons respectively_]{.center}
+![](images/Figure 5.png){.center}
+[[*Fig 12. Confusion matrix for case 3 test dataset with 3 hidden layers of 32, 64, and 128 neurons respectively*]{.center}]{.semibold}
 <p align="justify">__Outcome:__ 65% accuracy was obtained on the training data, with a loss of about 0.9.The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset</p>
 
-<p align="center">![](images/Figure 6.png)</p>
-[_Fig 13. Confusion matrix for case 3 test dataset  with 7 hidden layers of 32, 64, 128, 256, 128, 64 and 32 neurons respectively_]{.center}
+![](images/Figure 6.png){.center}
+[[*Fig 13. Confusion matrix for case 3 test dataset  with 7 hidden layers of 32, 64, 128, 256, 128, 64 and 32 neurons respectively*]{.center}]{.semibold}
 <p align="justify">__Outcome:__ 78% accuracy was obtained on the training data, with a loss of about 0.5</p>
 
 |Prediction Matrix|Description|
@@ -201,14 +201,14 @@ This study explains how data wrangling is performed to clean, manipulate and mak
 ![](images/Fig 16.png){.center}
 [[*Fig. 16: Data set after adding project duration classification*]{.center}]{.semibold}
 
-![](images/Fig 17.png){.center}
+![](images/Figu 17.png){.center}
 [[*Fig. 17: Transformed data in PCA coordinate frame*]{.center}]{.semibold}
 
-![](images/Fig 18.png){.center}
+![](images/Figu 18.png){.center}
 [[*Fig. 18: Boxplots of transformed data in PCA coordinate frame*]{.center}]{.semibold}
 
-![](images/Fig 19.png){.center}
+![](images/Figu 19.png){.center}
 [[*Fig. 19: Confusion matrix plots from R for case 2 test dataset, with 1  hidden layer of  32 neurons respectively*]{.center}]{.semibold}
 
-![](images/Fig 20.png){.center}
+![](images/Figu 20.png){.center}
 [[*Fig. 20: Confusion matrix plots from R for case 2 validation dataset with 1 hidden layer of 32 neurons respectively*]{.center}]{.semibold}
