--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -196,7 +196,10 @@ This study explains how data wrangling is performed to clean, manipulate and mak
 
 
 
+
+
 **__Appendix__**
+
 
 ![](images/Fig 14.png){.center}
 [[*Fig. 14: Summary of the cleaned dataset*]{.center}]{.semibold}
@@ -216,5 +219,5 @@ This study explains how data wrangling is performed to clean, manipulate and mak
 ![](images/Figu 19.jpg){.center}
 [[*Fig. 19: Confusion matrix plots from R for case 2 test dataset, with 1  hidden layer of  32 neurons respectively*]{.center}]{.semibold}
 
-![](images/Fig 20.jpg){.center}
+![](images/Figure  20.jpg){.center}
 [[*Fig. 20: Confusion matrix plots from R for case 2 validation dataset with 1 hidden layer of 32 neurons respectively*]{.center}]{.semibold}
